--- a/port.html
+++ b/port.html
@@ -12,8 +12,8 @@
         <nav>
             <ul class="menu">
                 <li><a href="#">HOME</a></li>
-                <li><a href="">SKILLS</a></li>
-                <li><a href="">CERTIFICATE</a></li>
+                <li><a href="#SKILLS">SKILLS</a></li>
+                <li><a href="#CERTIFICATE">CERTIFICATE</a></li>
                 <li><a href="">PROJECTS</a></li>
                 <li><a href="">CONTACT</a></li>
             </ul>
@@ -21,9 +21,9 @@
     </header>
     <div class="bottom-nav">
         <ul>
-            <li><a href="">HOME</a></li>
-            <li><a href="">SKILLS</a></li>
-            <li><a href="">CERTIFICATE</a></li>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#SKILLS">SKILLS</a></li>
+            <li><a href="#CERTIFICATE">CERTIFICATE</a></li>
             <li><a href="">PROJECTS</a></li>
             <li><a href="">CONTACT</a></li>
         </ul>
@@ -39,7 +39,7 @@
         </div>
         
     </div>
-    <div class="SKILLS">
+    <div class="SKILLS" id="SKILLS">
         <h1>SKILLS</h1>
         <div class="skills">
             <div><button><h1>CSS</h1></button></div>
@@ -51,11 +51,36 @@
         </div>
 
     </div>
-    <div class="CERTIFICATE">
+    <div class="CERTIFICATE" id="CERTIFICATE">
         <h1>CERTIFICATES</h1>
-        <div></div>
+        <div class="Wordpress">
+            <img src="Wordpress.jpg" alt="Wordpress CERTIFICATE">
+            <h1>Wordpress workshop</h1>
+            <p>I paricipate in Wordpress workshop on kongu engineering college.</p>
+        </div>
     </div>
-
-    
+    <div class="PROJECTS" id="PROJECTS">
+        <h1>PROJECTS</h1>
+        <div class="pro">
+        <div>
+            <img src="event.png" alt="">
+            <h1>Event Management System</h1>
+            <p>It is my first web page of training</p>
+        </div>
+        <div>
+            <img src="portfolio.png" alt="">
+            <h1>PORTFOLIO</h1>
+            <p>It is My domain site detais of in this webpage</p>
+        </div>
+        </div>
+    </div>
+    <div class="CONTACT">
+        <h1>CONTACT</h1>
+        <a href="tel:+916382754655">6382754655</a><br>
+        <a href=
+"mailto:feedback@geeksforgeeks.org?cc=feedback@xyz.com&bcc=contact@xyz.org&subject=Mail to GeeksForGeeks&body=Demo email" 
+      target="_blank">senbagapandiyan29092005@gmail.com</a>
+    </div>
+    <footer><h1>&COPY;senbagapandiyan29092005@gmail.com</h1></footer>
 </body>
 </html>
