--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">SENBAGAPANDIYAN</div>
-        <nav>
+        <nav class="header">
             <ul class="menu">
                 <li><a href="#">HOME</a></li>
                 <li><a href="#SKILLS">SKILLS</a></li>
