--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 </body>
 <script>
     const Menu = document.querySelector('.Menu')
-    const MenuList = document.querySelector('.header .menu')
+    const MenuList = document.querySelector('ul li')
     Menu.addEventListener('click',()=>{
         MenuList.classList.toggle('.showmenu')
     })
