responsive view change

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         
     </div>
     <div class="SKILLS" id="SKILLS">
-        <h1>SKILLS</h1>
+        <h1 class="sk">SKILLS</h1>
         <div class="skills">
             <div><button><h1>CSS</h1></button></div>
             <div><button><h1>JavaScript</h1></button></div>
@@ -81,10 +81,10 @@
     <footer><h1>&COPY;senbagapandiyan29092005@gmail.com</h1></footer>
 </body>
 <script>
-    const Menu = document.querySelector('.Menu')
-    const MenuList = document.querySelector('ul li')
+    const Menu=document.querySelector('.Menu')
+    const MenuList=document.querySelector('ul')
     Menu.addEventListener('click',()=>{
-        MenuList.classList.toggle('.showmenu')
+        MenuList.classList.toggle('showmenu')
     })
 </script>
 </html>
