--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 "mailto:feedback@geeksforgeeks.org?cc=feedback@xyz.com&bcc=contact@xyz.org&subject=Mail to GeeksForGeeks&body=Demo email" 
       target="_blank">senbagapandiyan29092005@gmail.com</a>
     </div>
-    <footer><h1>&COPY;senbagapandiyan29092005@gmail.com</h1></footer>
+    <footer><h1>&COPY; 2005 SENBAGAPANDIYAN</h1></footer>
 </body>
 <script>
     const Menu=document.querySelector('.Menu')
