change for about

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="About">
         <div class="About1">
-            <h1>Hi, I am <br>SENBAGAPANDIYAN G</h1>
+            <p><b>Hi, I am <br>SENBAGAPANDIYAN G</b></p>
             <p>A passionate Web Developer with a strong focus on creating responsive, user-friendly, and visually appealing websites. I enjoy turning ideas into interactive digital experiences using modern technologies like HTML, CSS, JavaScript, React, and Node.js.</p>
             <div class="button"><button><a href="SENBAGAPANDIYAN G.docx" class="CV">DOWNLOAD CV</a></button></div>
         </div>
